# routes/finance.go
@@ -1,0 +1,12 @@
+package routes
+
+import (
+	finance "DompetKilat-SimpleWeb/controller/Finance"
+
+	"github.com/labstack/echo/v4"
+)
+
+func Service(e *echo.Group) {
+	service := e.Group("/service")
+	service.Add("POST", "/createFinances", finance.CreateFinance)
+}
